Fix UI issues on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
 .content {
   line-height: 1;
   text-align: center;
-  width: 50%;
+  width: 100%;
   height: 50%;
   overflow: auto;
   margin: auto;
@@ -80,7 +80,7 @@ body {
   padding: 13px 25px;
   font-size: 18px;
   border-radius: 40px;
-  margin: 7px;
+  margin: 8px;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
 }
@@ -99,23 +99,3 @@ body {
   color: rgba(255, 255, 255, 0.9);
 }
 
-@media only screen and (max-width: 767px) {
-  .content .content-main h1 {
-    font-size: 182px;
-  }
-}
-
-@media only screen and (max-width: 480px) {
-  .content .content-main {
-    height: 146px;
-  }
-  .content .content-main h1 {
-    font-size: 146px;
-  }
-  .content h2 {
-    font-size: 16px;
-  }
-  .content .home-btn, .content .contact-btn {
-    font-size: 14px;
-  }
-}
